# heatlapse

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  oldreqs.txt  pyproject.toml
.github/workflows/: python-app.yml
heatlapse/: __init__.py  main.py  utils.py
tests/: test_main.py  test_utils.py
